# dotfiles

./: .bash_aliases  .bashrc  .gitconfig  .gitignore  .vimrc  bash_aliases  bashrc  gitconfig  init.sh  init_dots.sh  install.sh  link_dots.sh  practical-vim.md  practical-vim.txt  setup.sh  vimrc
.github/workflows/: check.yml
.vim/: .netrwhist
config/: starship.toml
config/alacritty/: alacritty.toml
config/nvim/: coc-settings.json  init.lua  init.vim  init.vim_  lazy-lock.json  vimrc
config/nvim/lua/: base.lua  config.lua  diagnostics.lua
config/nvim/lua/base/: display.lua  init.lua
config/nvim/lua/config/: lazy.lua
config/nvim/lua/plugins/: ai.lua  align.lua  auto-pair.lua  bookmark.lua  buffer.lua  cmdline.lua  code_action.lua  colorscheme.lua  cursor.lua  diagnositcs.lua  diagnostics.lua  filer.lua  format.lua  fzf.lua  git.lua  help.lua  increment.lua  indent-guide.lua  lsp.lua  man.lua  markdown.lua  motion.lua  no-neck-pain.lua  profile.lua  (+8 more)
config/pypoetry/: pyproject.toml
config/todo/config/: todo.cfg
config/wezterm/: wezterm.lua
config/zellij/: bashrc  config.kdl
conoha/: bashrc  install.sh
installers/: init_dots.sh
nvim/: coc-settings.json
settings.vim/basic/: buffer.vim  display.vim  env.vim  file-lifecycle.vim  keymap.vim  mouse.vim  tab-indent.vim
settings.vim/plugin/: airline.vim  align.vim  coc.vim  colorsheme.vim  comment.vim  filer.vim  fzf.vim  git.vim  import_auto.py  lark.vim  markdown.vim  python.vim  search.vim  snippets.vim  surround.vim  terminal.vim  terraform.vim
settings.vim/script/: install-vim-plug.vim
(+17 files in other folders)
