[tool.poetry]
name = "poetry-instance"
version = "2.0.1"
description = ""
authors = []
license = ""
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
poetry = "2.0.1"

[tool.poetry.group.additional.dependencies]
poetry-dynamic-versioning = {extras = ["plugin"], version = "^1.6.0"}
poetry-plugin-shell = "^1.0.1"
selenium = "^4.31.0"

