[tool.poetry]
name = "poetry-instance"
version = "2.1.3"
description = ""
authors = []
license = ""
package-mode = false

[tool.poetry.dependencies]
python = "3.13.3"
poetry = "2.1.3"

[tool.poetry.group.additional.dependencies]
poetry-dynamic-versioning = {extras = ["plugin"], version = "^1.8.2"}
poetry-plugin-shell = "^1.0.1"
selenium = "^4.31.0"
pynvim = "^0.5.2"

